@@ -16,6 +16,8 @@ import edu.colorado.phet.fractionsintro.intro.model.ContainerSet;
 import static fj.data.List.iterableList;
 
 /**
+ * Immutable factory class for creating slices.  Abstract class, subclasses provide specific behavior/shapes/layout for that kind of object.
+ *
  * @author Sam Reid
  */
 public abstract class AbstractSliceFactory implements SliceFactory {
@@ -23,7 +25,7 @@ public abstract class AbstractSliceFactory implements SliceFactory {
     public final int numPies = 6;
     public final Dimension2DDouble stageSize = new Dimension2DDouble( 1024, 768 );
     public final Color bucketColor = new Color( 136, 177, 240 );//A shade that looks good behind the green objects
-    public final Bucket bucket = new Bucket( stageSize.width / 2, -stageSize.height + 200, new Dimension2DDouble( 300, 100 ), bucketColor, "" );
+    public final Bucket bucket = new Bucket( stageSize.width / 2, -stageSize.height + 200, new Dimension2DDouble( 350, 100 ), bucketColor, "" );
     public final Random random = new Random();
 
     @Override public Bucket bucket() {
